Localized header, pages titles and descriptions, about
Signed-off-by: George Araujo <george.gcac@gmail.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
 
               <!-- About -->
               <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }}
+                <a class="nav-link" href="{{ '/' | prepend: site.baseurl }}">{% t about_title %}
                   {%- if page.permalink == '/' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
@@ -54,7 +54,7 @@
               {% if site.blog_nav_title %}
               <!-- Blog -->
               <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
+                <a class="nav-link" href="{{ '/blog/' | prepend: site.baseurl }}">{{ site.blog_nav_title }}
                   {%- if page.url contains 'blog' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
@@ -68,7 +68,7 @@
               {%- if p.nav and p.autogen == nil -%}
               {%- if p.dropdown %}
               <li class="nav-item dropdown {% if page.title == p.title %}active{% endif %}">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ p.title }}
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% t p.title %}
                   {%- if page.title == p.title -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
@@ -78,14 +78,15 @@
                   {%- if child.title == 'divider' %}
                   <div class="dropdown-divider"></div>
                   {%- else %}
-                  <a class="dropdown-item" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
+                  <a class="dropdown-item" href="{{ child.permalink | prepend: site.baseurl }}">{% t child.title %}</a>
+
                   {%- endif -%}
                   {% endfor %}
                 </div>
               </li>
               {%- else %}
               <li class="nav-item {% if page.title == p.title %}active{% endif %}">
-                <a class="nav-link" href="{{ p.url | relative_url }}">{{ p.title }}
+                <a class="nav-link" href="{{ p.url | prepend: site.baseurl }}">{% t p.title %}
                   {%- if page.title == p.title -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
@@ -94,8 +95,46 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-              {%- if site.enable_darkmode %}
 
+              <!-- Toogle language -->
+              {%- if site.languages.size >= 2 %}
+                {%- if site.languages.size == 2 %}
+                <li class="nav-item active">
+                  {% if site.lang == site.languages.first %}
+                    <a class="nav-link" href="{{site.baseurl_root}}/{{site.languages.last}}{{page.url}}">{{site.languages.last | upcase}}</a>
+                  {% elsif site.lang == site.languages.last %}
+                    <a class="nav-link" href="{{site.baseurl_root}}{{ page.url }}">{{site.languages.first | upcase}}</a>
+                  {% endif %}
+                </li>
+                {%- else -%}
+                  <li class="nav-item dropdown {% if page.title == p.title %}active{% endif %}">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ site.lang | upcase }}
+                      {%- if page.title == p.title -%}
+                      <span class="sr-only">(current)</span>
+                      {%- endif -%}
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                      {%- assign language_set = false -%}
+                      {%- for l in site.languages -%}
+                      {%- if l != site.lang -%}
+                      {%- if language_set %}
+                      <div class="dropdown-divider"></div>
+                      {%- endif -%}
+                      {% if l == site.languages.first %}
+                      <a class="dropdown-item" href="{{site.baseurl_root}}{{page.url}}">{{l | upcase}}</a>
+                      {% else %}
+                      <a class="dropdown-item" href="{{site.baseurl_root}}/{{l}}{{page.url}}">{{l | upcase}}</a>
+                      {% endif %}
+                      {%- assign language_set = true -%}
+                      {%- endif -%}
+                      {% endfor %}
+                    </div>
+                  </li>
+                {%- endif -%}
+              {%- endif -%}
+
+              {%- if site.enable_darkmode %}
               <!-- Toogle theme mode -->
               <li class="toggle-container">
                 <button id="light-toggle" title="Change theme">
