--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,8 @@ layout: default
         <div class="post">
 
           <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
-            <p class="post-description">{{ page.description }}</p>
+            <h1 class="post-title">{% t page.title %}</h1>
+            <p class="post-description">{% if page.description %}{% t page.description %}{% endif %}</p>
           </header>
 
           <article>
