--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -11,7 +11,7 @@ layout: default
 
           <article>
             <div class="cv">
-              {% for entry in site.data.cv %}
+              {% for entry in site.data[site.lang].cv %}
                 <div class="card mt-3 p-3">
                   <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
                   <div>
