--- a/_layouts/archive-category.html
+++ b/_layouts/archive-category.html
@@ -16,7 +16,7 @@ layout: default
         <tr>
           <th scope="row">{% include date_format.html format="short" date_from=post %}</th>
           <td>
-              <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a>
+              <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
           </td>
         </tr>
       {% endfor %}
