--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,7 @@
               {% if site.blog_nav_title %}
               <!-- Blog -->
               <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | prepend: site.baseurl }}">{{ site.blog_nav_title }}
+                <a class="nav-link" href="{{ '/blog/' | prepend: site.baseurl }}">{% t blog.nav_title %}
                   {%- if page.url contains 'blog' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
